Prepare for new version 1.0